--- a/static/css/all_projects.sass
+++ b/static/css/all_projects.sass
@@ -34,6 +34,11 @@
 
 .date
     justify-content: center
+    padding: 1.5rem 0rem
+
+.date-content
+    font-weight: bolder
+    text-align: center
 
 @media (min-width: 576px)
     .modal-dialog 
@@ -47,12 +52,26 @@
     color: #00f !important
 
 .pad
-    margin-right: 2rem
+    max-height: 8rem
+    max-width: 7rem
+    margin: 1rem 1.5rem
+
+.side
+    padding: 0.5rem
+    border-radius: 0.3rem
+    width: 100%
 
 .launch
     padding: 1rem !important
     font-weight: bold
+    margin-bottom: 1rem
     width: 100%
 
 .project
     margin: 1rem auto
+
+.shadow-effects
+    box-shadow: 0rem 0rem 1.5rem rgba(0,0,0,0.4) !important
+
+.para-content
+    text-align: justify
