--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="{{url_for('static', filename = 'images/icons/a.ico')}}"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap-4.5.0/bootstrap.min.css')}}">
@@ -13,7 +14,6 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
-
   	<!-- Navbar Starts -->
 
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark navbar-color">
@@ -42,6 +42,9 @@
 				<li class="nav-item">
 					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Videos</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" target="_blank" href="{{url_for('static', filename='files/Resume.pdf')}}">Resume</a>
+				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search Projects ..." aria-label="Search">
@@ -61,7 +64,7 @@
 				<div class="col-area col-md-4">
 					<div class="h2">ASHOK KUMAR K</div>
 					<div class="h5">Seeking for Data Science Internship</div>
-					<div class="h6">I have explored on various Machine Learning algorithms and very good hands-on practice on Descriptive Statistics, Predictive Statistics, Exploratory Data Analysis (EDA), Feature Engineering, Feature Selection, Feature Scaling, etc..,</div>
+					<div class="h6">I have experience on various Machine Learning algorithms and very good hands-on practice on Descriptive Statistics, Predictive Statistics, Exploratory Data Analysis (EDA), Feature Engineering, Feature Selection, Feature Scaling, etc..,</div>
 				</div>
 				<div class="col-area col-md-2">
 					<div class="h5">Explore</div>
@@ -76,14 +79,14 @@
 				</div>
 				<div class="col-area col-md-4">
 					<div class="h5 text-center">Visit</div>
-					<p>No.162, kommathamman kovil street, old nallur, Kancheepuram, Chennai - 600069</p>
+					<p>No.192, kommathamman kovil street, old nallur, Kancheepuram, Chennai - 600069</p>
 					<div class="h6">
 						<a href="mailto:ashokkumark.citeee2017@gmail.com">
 							Email : ashokkumark.citeee2017@gmail.com
 						</a>
 						<br><br>
-						Phone : +91 6382540562<br><br>
-						WhatsApp : +91 805224273<br><br>
+						Phone : +91 6382040562<br><br>
+						WhatsApp : +91 8056224273<br><br>
 					</div>
 				</div>
 				<div class="col-md-2">
@@ -105,6 +108,7 @@
 			</div>
 		</div>
 	</footer>
+
 	<!-- Footer Ends -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
