Gender And Weight Readme documentation added

--- a/templates/all_projects.html
+++ b/templates/all_projects.html
@@ -14,7 +14,7 @@
 
 		{% if ml_projects_data[0][row*3 + col] %}
 		<div class="col-md-4 project">
-			<div class="card shadow-effects rounded">
+			<div id="{{ ml_projects_data[20][row*3 + col] }}" class="card shadow-effects rounded">
 				<h4 class="card-title text-center">{{ ml_projects_data[1][row*3 + col] }}</h4>
 				<div class="card-body">
 					<div class="img-top-content">
