--- a/templates/base.html
+++ b/templates/base.html
@@ -27,20 +27,23 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="https://data-scientist-ashok.herokuapp.com/about">About <span class="sr-only">(current)</span></a>
+				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="https://data-scientist-ashok.herokuapp.com/projects">
+						Projects&nbsp;&nbsp;
+						<span class="badge badge-warning">5</span>
+					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Journey</a>
+					<a class="nav-link" href="https://data-scientist-ashok.herokuapp.com/blogs">
+						Blogs&nbsp;&nbsp;
+						<span class="badge badge-warning">3</span>
+					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Projects</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Blogs</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Videos</a>
+					<a class="nav-link disabled" href="https://data-scientist-ashok.herokuapp.com/videos" tabindex="-1" aria-disabled="true">Videos</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" target="_blank" href="{{url_for('static', filename='files/Resume.pdf')}}">Resume</a>
